# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [5.7.3] - 2023-09-23

### Changed

- O comando `/macetava` não mostra mais o discriminator dos usuários.

## [5.7.2] - 2023-08-05

### Fixed

- Resolvido o problema onde a Menhera crashava enquanto reiniciava.

## [5.7.1] - 2023-07-31

### Fixed

- O comando `/perfil` mostrava o seu nome como sendo de seu cônjuge.
- A punição de inatividade não era citada nas transações.

## [5.7.0] - 2023-07-30

### Added

- **Transações!** - Agora é possível ver transações de usuários da Menhera com o comando `/transações`

### Changed

- Não é mais possível clicar 2 vezes no botão do top enquanto a próxima página carrega

### Fixed

- Top semanal de caças mostrava usernames vazios.

## [5.6.5] - 2023-07-30

### Added

- Todas as transações feitas por usuários são salvas agora! Em próximas atualizações, as transações poderão ser vistas por comandos!

## [5.6.4] - 2023-07-23

### Added

- Agora é possível alterar pela página do top usando *Botões*. Sugerido por @mareys (653755256953503757)

## [5.6.3] - 2023-07-01

### Changed

- Ao empatar com a Menhera no `/blackjack` suas estrelinhas apostadas são devolvidas. Isso mesmo, nada de derrotas por empate! - Sugerido por @luizinn_ (928461486173618176)

## [5.6.2] - 20233-06-08

### Fixed

- Corrigido problema onde o comando `/top caças` não funcionava.

## [5.6.1] - 2023-06-07

### Added

- Os perfis `Clima Natalino`, `Guerreiro Aposentado` e `Fortificação` agora possuem a customização para escolher se ele deve usar a sua Cor ou sua Imagem para contruir o perfil.

### Changed

- Nas customizações do tema `Mural` agora é possível escolher se a fonte dos textos serão branca ou preta.

## [5.6.0] - 2023-06-06

### Added
