@@ -5,6 +5,12 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).
 
+## [Unreleased]
+
+### Added
+
+- **POKER**!!!! Agora é possível jogar *Poker* na Menhera! Use `/poker` e aposte com seus amigos.
+
 ## [5.7.3] - 2023-09-23
 
 ### Changed
